name:                FuseSys
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/FuseSys#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FuseBindings
                     , Logging
                     , CInterop
                     , Posix.Directory

  build-depends:       HFuse
                     , QuickCheck
                     , base >= 4.7 && < 5
                     , directory
                     , filepath
                     , hspec
                     , process
                     , stm
                     , unix
                     , transformers
                     , bifunctors
                     , bytestring
                     , utf8-string
  default-language:    Haskell2010
                     

executable FuseSys-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       FuseSys
                     , HFuse
                     , base
                     , filepath
  default-language:    Haskell2010
                     

test-suite FuseSys-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       FuseSys
                     , QuickCheck
                     , base
                     , hspec
                     , process
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/FuseSys
